# NewRusAgroBack_Control_Operations

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  RusAgroBack_Control_Operations.sln
RusAgroBack_Control_Operations/: RusAgroBack_Control_Operations.vcxproj  RusAgroBack_Control_Operations.vcxproj.filters
RusAgroBack_Control_Operations/config/: db_config.yml
RusAgroBack_Control_Operations/src/: main.cpp
RusAgroBack_Control_Operations/src/SapControlTech/: CalcActualDate.cpp  CalcActualDate.hpp  CalcActualDateCompleteEntryOperation.cpp  CalcActualDateCompleteEntryOperation.hpp  CalcMinimalDate.cpp  CalcMinimalDate.hpp  CalcMinimalPlannedDate.cpp  CalcMinimalPlannedDate.hpp  CalcResawingDate.cpp  CalcResawingDate.hpp  CalcSawingDate.cpp  CalcSawingDate.hpp  SapControlTech.cpp  SapControlTech.hpp
RusAgroBack_Control_Operations/src/SapControlTech/DataStruct/: InitialData.cpp  InitialData.hpp  SapData.cpp  SapData.hpp  SapDataAggregated.cpp  SapDataAggregated.hpp  SapDataDistinct.cpp  SapDataDistinct.hpp
RusAgroBack_Control_Operations/src/SapSugarBeetSawingDates/: SapSugarBeetSawingDates.cpp
RusAgroBack_Control_Operations/src/db/: db.cpp  db.hpp
RusAgroBack_Control_Operations/src/utils/: utilsBoostDate.cpp  utilsBoostDate.hpp  utilsOptional.hpp
config/: db_config.yml.example
src/: main.cpp
src/calc/SapControlTech/: CalcActualDate.cpp  CalcActualDate.hpp  CalcActualDateCompleteEntryOperation.cpp  CalcActualDateCompleteEntryOperation.hpp  CalcMinimalDate.cpp  CalcMinimalDate.hpp  CalcMinimalPlannedDate.cpp  CalcMinimalPlannedDate.hpp  CalcResawingDate.cpp  CalcResawingDate.hpp  CalcSawingDate.cpp  CalcSawingDate.hpp  SapControlTech.cpp  SapControlTech.hpp
src/calc/SapSugarBeetSawingDates/: SapSugarBeetSawingDates.cpp  SapSugarBeetSawingDates.hpp
src/data_struct/: InitialData.cpp  InitialData.hpp  SapData.cpp  SapData.hpp
src/db/: db.cpp  db.hpp
src/utils/: utilsBoostDate.cpp  utilsBoostDate.hpp
